--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: GoGorilla Forms
+title: Rilla Forms
 email: justin@steventon.com
 logo: "/assets/logo.svg"
 description: >- # this means to ignore newlines until "baseurl:"
-  GoGorilla Forms is for users wanting to get the most out of GoGorilla Forms. It includes
+  Rilla Forms is for users wanting to get the most out of the Rilla Forms field data collection system. It includes
   information for users of all levels.
 baseurl: "" # the subpath for github pages
-url: "https://www.gogorillaforms.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.rillaforms.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: justinsteventon
 
 color_scheme: ggcolors
@@ -46,8 +46,8 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 
 # Aux links for the upper right navigation
 aux_links:
-  "GoGorilla Forms":
-    - "https://gogorillaforms.com"
+  "Rilla Forms":
+    - "https://rillaforms.com"
 
 # Back to top link
 back_to_top: true
