--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ include: ["_pages", ".well-known"]
 heading_anchors: true
 
 # Google Analytics Tracking
-ga_tracking: G-T7RMFRMKP5
+ga_tracking: G-49MW113R5Z
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true by default)
 
 # Aux links for the upper right navigation
